--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,23 @@
     display: flex;
     flex-direction: row;
     z-index: 1000;
+    overflow: hidden; 
+    border-radius: 25px; 
+    background-color: whitesmoke;
+    border-color: darkgray;
+    border-style: solid;
+    border-width: 1px;
   }
   
+  .emoji-button {
+    padding: 0 10px;
+    box-sizing: border-box; /* Include padding and border in the element's total width and height */
+    border: none;
+    padding: '0 4px';
+  }
   
+  .emoji-button:hover {
+    cursor: pointer !important;
+    background-color: #f1f1f1;
+  }
+
