--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,31 @@
 .emoji-container {
-    position: absolute;
-    right: 0;
-    top: 5;
-    padding: 8px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: row;
-    z-index: 1000;
-    overflow: hidden; 
-    border-radius: 25px; 
-    background-color: whitesmoke;
-    border-color: darkgray;
-    border-style: solid;
-    border-width: 1px;
-  }
-  
-  .emoji-button {
-    padding: 0 10px;
-    box-sizing: border-box; /* Include padding and border in the element's total width and height */
-    border: none;
-    padding: '0 4px';
-    background-color: transparent;
-  }
-  
-  .emoji-button:hover {
-    cursor: pointer !important;
-    background-color: #f1f1f1;
-  }
+  position: absolute;
+  left: 0;
+  top: 5;
+  padding: 8px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: row;
+  z-index: 1000;
+  overflow: hidden;
+  border-radius: 25px;
+  background-color: whitesmoke;
+  border-color: darkgray;
+  border-style: solid;
+  border-width: 1px;
+  transition: opacity 2000ms ease-in-out;
+}
 
+.emoji-button {
+  padding: 0 10px;
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
+  border: none;
+  padding: "0 4px";
+  background-color: transparent;
+}
+
+.emoji-button:hover {
+  cursor: pointer !important;
+  background-color: #f1f1f1;
+}
